google maps API stuff added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Katie's Project</title>
 	<meta charset="UTF-8">
 	<title>Katie's Final Project</title>
+	  <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
 	
 	<h1>Well here we are...</h1>
 	<p>What shall we create?</p>
+
+	<div id="map"></div>
+
+<script src="js/jquery-3.3.1.min.js"></script>
+
+<script src="js/main.js"></script>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB97mcJE-Z8bfRb6q9yjiOzIi45QoQc_TU&callback=initMap"></script>
 
 </body>
 </html>
